fix: fix pagination gap

--- a/src/assets/styles/components/_pagination.scss
+++ b/src/assets/styles/components/_pagination.scss
@@ -1,6 +1,6 @@
 .pagination {
   display: flex;
-  gap: 22px;
+  gap: 20px;
   justify-content: center;
 
   &__item--first::before {
